...
    <string name="qrScanning_noExistUid">Error not an existing uid</string>
    <string name="qrScanning_newFriend">Congratulations, you have a new friend</string>

    <!-- GameSetup -->
    <string name="GameSetup_internetSwitchOn">Internet is on</string>
    <string name="GameSetup_internetSwitchOff">Internet is off</string>
    <string name="GameSetup_easy">Easy</string>
    <string name="GameSetup_medium">Medium</string>
    <string name="GameSetup_hard">Hard</string>
    <string name="GameSetup_ask_difficulty">Please choose the difficulty of your game</string>
    <string name="gameSetup_offlineGame">Offline Game</string>
    <string name="gameSetup_offlineBuzzer">Offline Buzzer</string>


    <string-array name="difficulties_name">
...
    <string name="gameGenre_r_o_c_k">R O C K</string>
    <string name="gameGenre_k_p_o_p">K P O P</string>
    <string name="gameGenre_t_o_p_t_r_a_c_k_s">T O P T R A C K S</string>
    <string name="gameGenre_byArtistSearch">Personalized Artist</string>

    <!-- AppPreferences -->
    <string name="preferences_game_mode">game_mode</string>
    <string name="preferences_game_genre">game_genre</string>

    <!-- Profile -->
    <string name="profile_verify_change_profile_pic">Do you want to change your profile picture?</string>
    <string name="profile_logout">logout</string>
    <string name="profile_scores">Scores</string>
    <string name="profile_following">Following</string>
...
    <string name="join_room">Join party room</string>
    <string name="create_room">Create party room</string>


    <string name="game_typing">Local Typing</string>
    
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>

    <string-array name="game_size_options">
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
...
