...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/genrePerScoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <Space
...
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btsButton"
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button"
                    android:text="@string/gameGenre_bts"
                    app:layout_constraintBottom_toBottomOf="parent"
...
